2004-08-27 Shane Landrum <epicene@pobox.com>

	* en/Gtk/WindowKeysForeachFunc.xml
	* en/Gtk/Accessibility.xml
	* en/Gtk/CallbackMarshal.xml
	* en/Gtk/ColorSelectionChangePaletteFunc.xml
	* en/Gtk/ColorSelectionDialog.xml
	* en/Gtk/Container.xml
	* en/Gtk/DestroyNotify.xml
	* en/Gtk/IconSet.xml
	* en/Gtk/ScrollAdjustmentsSetArgs.xml
	* en/Gtk/ScrollType.xml 
	* en/Gtk/MoveFocusArgs.xml : Miscellaneous docs.
	* en/Gtk/RB*.xml : Internal classes. Do not use.
	* en/Gtk/Style*.xml : Began documenting style-related classes.
	
2004-08-27 Shane Landrum <epicene@pobox.com>

	* en/Gtk/TagAddedArgs.xml
	* en/Gtk/TagAppliedArgs.xml
	* en/Gtk/TagChangedArgs.xml
	* en/Gtk/TagRemovedArgs.xml : Docs for event data classes.
	
2004-08-26 Shane Landrum <epicene@pobox.com>

	* en/Gtk/TreeModelSort.xml
	* en/Gtk/TreeView.xml: XML fixes.
	* en/Gtk/TextWindow.xml: Added docs.
	* en/Gtk/TextIter.xml: Elaborated existing docs.
	* en/Gtk/TextCharPredicate: Delegate for TextIter; docs.
	* en/Gtk/TextTagTableForeach.xml: Added docs.
	* en/Gtk/InsertTextArgs.xml: Event arguments.
	* en/Gtk/TextTag.xml: Added docs.
	* en/Gtk/TextCounter.xml: Internal class. Do not use.
	* en/Gtk/TextToggleBody.xml: Internal class. Do not use.
	* en/Gtk/TextTagInfo.xml: Internal class. Do not use.

	
2004-08-24 Shane Landrum <epicene@pobox.com>

	* en/Gtk/TreeView.xml:
	* en/Gtk/TreeModel.xml:
	* en/Gtk/TreeModelSort.xml:
	* en/Gtk/TreeSortable.xml:
	* en/Gtk/ListStore.xml: Added docs for list/tree classes; made them
	consistent across similar classes.
	* en/Gtk/TreeRowReference.xml: Marked internal-only.
	
2004-08-24  Mike Kestner  <mkestner@ximian.com>

	* en/Gdk/Drawable.xml : add DrawPolygon overload and doc both.
	* en/Gdk/Pixbuf.xml : add RenderThresholdAlpha overload docs.
	* en/Gtk/Style.xml : fix signature of PaintPolygon.

2004-08-22  Shane Landrum <epicene@pobox.com>

	* en/Gtk/RowActivatedArgs.xml
	* en/Gtk/RowCollapsedArgs.xml
	* en/Gtk/RowExpandedArgs.xml
	* en/Gtk/TestCollapseRowArgs.xml