@@ -39,9 +39,9 @@
         <ReturnType>System.IntPtr</ReturnType>
       </ReturnValue>
       <Docs>
-        <summary>A pointer to the accelerator that was changed.</summary>
-        <returns>To be added: an object of type 'IntPtr'</returns>
-        <remarks>To be added</remarks>
+        <summary>A pointer to the underlying C data of the accelerator that was changed.</summary>
+        <returns>A <see cref="T:IntPtr"/></returns>
+        <remarks/>
       </Docs>
     </Member>
     <Member MemberName="Modifier">
