@@ -7,8 +7,9 @@
   </AssemblyInfo>
   <ThreadSafetyStatement>Gtk# is thread aware, but not thread safe; See the <link location="node:gtk-sharp/programming/threads">Gtk# Thread Programming</link> for details.</ThreadSafetyStatement>
   <Docs>
-    <summary>To be added</summary>
-    <remarks>To be added</remarks>
+    <summary>A delegate to activate all the accelerators in a given
+<see cref="T:Gtk.AccelGroup"/>.</summary>
+    <remarks/>
   </Docs>
   <Base>
     <BaseTypeName>System.Delegate</BaseTypeName>
