@@ -10,8 +10,8 @@
   </AssemblyInfo>
   <ThreadSafetyStatement>Gtk# is thread aware, but not thread safe; See the <link location="node:gtk-sharp/programming/threads">Gtk# Thread Programming</link> for details.</ThreadSafetyStatement>
   <Docs>
-    <summary>To be added</summary>
-    <remarks>To be added</remarks>
+    <summary>One item within a <see cref="T:Gtk.AccelGroup"/>.</summary>
+    <remarks/>
   </Docs>
   <Base>
     <BaseTypeName>System.ValueType</BaseTypeName>
@@ -27,8 +27,8 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>An empty <see cref="T:Gtk.AccelGroupEntry"/>.</summary>
+        <remarks/>
       </Docs>
     </Member>
     <Member MemberName="New">
@@ -41,10 +41,10 @@
         <Parameter Name="raw" Type="System.IntPtr" />
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
-        <param name="raw">To be added: an object of type 'IntPtr'</param>
-        <returns>To be added: an object of type 'Gtk.AccelGroupEntry'</returns>
-        <remarks>To be added</remarks>
+        <summary>Internal constructor; do not use.</summary>
+        <param name="raw"><see cref="T:IntPtr"/>, pointer to the underlying C object.</param>
+        <returns>a <see cref="T:Gtk.AccelGroupEntry"/></returns>
+        <remarks/>
       </Docs>
     </Member>
     <Member MemberName="Key">
@@ -56,8 +56,8 @@
       <Parameters>
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>The key for this accelerator.</summary>
+        <remarks/>
       </Docs>
     </Member>
     <Member MemberName="AccelPathQuark">
