@@ -96,7 +96,7 @@
         <Parameter Name="flags" Type="Gtk.AccelFlags" />
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
+        <summary>Public constructor.</summary>
         <param name="key">a <see cref="T:System.Int32" /> enumerated in <see cref="T:Gdk.Key" /></param>
         <param name="mods">a <see cref="T:System.Int32" /> enumerated in <see cref="T:Gdk.ModifierType" />, the modifiers (shift, ctrl, etc) that apply for this AccelKey</param>
         <param name="flags">a <see cref="T:System.Int32" /> enumerated in <see cref="T:Gdk.AccelFlags" /> for whether this AccelKey should be displayed in the menu</param>
