@@ -127,8 +127,8 @@
       </Parameters>
       <Docs>
         <summary>Sets the closure to be monitored by this accelerator label.</summary>
-        <param name="value">To be added: an object of type 'IntPtr'</param>
-        <returns>To be added: an object of type 'IntPtr'</returns>
+        <param name="value">A <see cref="T:IntPtr"/></param>
+        <returns>A <see cref="T:IntPtr"/></returns>
         <remarks>
           <para>
            Sets the closure to be monitored by this accelerator label. The closure must be connected to an accelerator group. See <see cref="P:Gtk.AccelLabel.AccelWidget" />.
