@@ -10,8 +10,8 @@
   </AssemblyInfo>
   <ThreadSafetyStatement>Gtk# is thread aware, but not thread safe; See the <link location="node:gtk-sharp/programming/threads">Gtk# Thread Programming</link> for details.</ThreadSafetyStatement>
   <Docs>
-    <summary>To be added</summary>
-    <remarks>To be added</remarks>
+    <summary>An accelerator.</summary>
+    <remarks>TODO: explain the relationship between this class and <see cref="T:Gtk.Accel"/>.</remarks>
   </Docs>
   <Base>
     <BaseTypeName>System.Object</BaseTypeName>
@@ -75,10 +75,10 @@
       <Parameters>
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
+        <summary>A mask to specify the default modifier key(s).</summary>
         <param name="value">a <see cref="T:Gdk.ModifierType" /></param>
         <returns>a <see cref="T:Gdk.ModifierType" /></returns>
-        <remarks>To be added</remarks>
+        <remarks/>
       </Docs>
     </Member>
     <Member MemberName="Parse">
@@ -93,11 +93,11 @@
         <Parameter Name="accelerator_mods" Type="Gdk.ModifierType&amp;" RefType="out" />
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
+        <summary> Parses a string representing an accelerator. The format looks like "&lt;Control&gt;a" or "&lt;Shift&gt;&lt;Alt&gt;F1" or "&lt;Release&gt;z" (the last one is for key release). The parser is fairly liberal and allows lower or upper case, and also abbreviations such as "&lt;Ctl&gt;" and "&lt;Ctrl&gt;".</summary>
         <param name="accelerator">a <see cref="T:System.String" /></param>
-        <param name="accelerator_key">a <see cref="T:System.UInt32&amp;" /></param>
-        <param name="accelerator_mods">a <see cref="T:Gdk.ModifierType&amp;" /></param>
-        <remarks>To be added</remarks>
+        <param name="accelerator_key">a <see cref="T:System.UInt32&amp;" />, thekey to map to.</param>
+        <param name="accelerator_mods">a <see cref="T:Gdk.ModifierType&amp;" /> to fill with data.</param>
+        <remarks>If the parse fails, <paramref name="accelerator_key"/> and <paramref name="accelerator_mods"/> will be set to 0 (zero).</remarks>
       </Docs>
     </Member>
   </Members>
