@@ -41,7 +41,7 @@
       <Docs>
         <summary>The new alignment of the paragraph.</summary>
         <returns>a <see cref="Gtk.HTMLParagraphAlignment" /></returns>
-        <remarks>To be added</remarks>
+        <remarks/>
       </Docs>
     </Member>
   </Members>
