@@ -39,9 +39,9 @@
         <ReturnType>Gtk.HTMLParagraphStyle</ReturnType>
       </ReturnValue>
       <Docs>
-        <summary>To be added</summary>
-        <returns>To be added: an object of type 'Gtk.HTMLParagraphStyle'</returns>
-        <remarks>To be added</remarks>
+        <summary>The new style that was set.</summary>
+        <returns>a <see cref="T:Gtk.HTMLParagraphStyle"/></returns>
+        <remarks/>
       </Docs>
     </Member>
   </Members>
