@@ -200,7 +200,7 @@ color or pixmap specified by this style for <paramref name="state"/>.</summary>
         <Parameter Name="stock_id" Type="System.String" />
       </Parameters>
       <Docs>
-        <summary>Gets the icon set for the given <paramref name="stock_id">.</summary>
+        <summary>Gets the icon set for the given <paramref name="stock_id"/>.</summary>
         <param name="stock_id">A <see cref="T:System.String"/></param>
         <returns>A <see cref="T:Gtk.IconSet"/></returns>
         <remarks/>
@@ -359,9 +359,9 @@ color or pixmap specified by this style for <paramref name="state"/>.</summary>
         <ReturnType>Gdk.GC []</ReturnType>
       </ReturnValue>
       <Docs>
-        <summary>To be added</summary>
+        <summary>Gets the graphics context objects for the background.</summary>
         <returns>A <see cref="T:Gdk.GC []"/></returns>
-        <remarks>To be added</remarks>
+        <remarks/>
       </Docs>
     </Member>
     <Member MemberName="ForegroundGCs">
@@ -371,9 +371,9 @@ color or pixmap specified by this style for <paramref name="state"/>.</summary>
         <ReturnType>Gdk.GC []</ReturnType>
       </ReturnValue>
       <Docs>
-        <summary>To be added</summary>
+        <summary>Gets the graphics context objects for the foreground.</summary>
         <returns>A <see cref="T:Gdk.GC []"/></returns>
-        <remarks>To be added</remarks>
+        <remarks/>
       </Docs>
     </Member>
     <Member MemberName="BlackGC">
@@ -383,9 +383,9 @@ color or pixmap specified by this style for <paramref name="state"/>.</summary>
         <ReturnType>Gdk.GC</ReturnType>
       </ReturnValue>
       <Docs>
-        <summary>To be added</summary>
+        <summary>Gets a white graphics context.</summary>
         <returns>A <see cref="T:Gdk.GC"/></returns>
-        <remarks>To be added</remarks>
+        <remarks/>
       </Docs>
     </Member>
     <Member MemberName="WhiteGC">
@@ -395,9 +395,9 @@ color or pixmap specified by this style for <paramref name="state"/>.</summary>
         <ReturnType>Gdk.GC</ReturnType>
       </ReturnValue>
       <Docs>
-        <summary>To be added</summary>
+        <summary>Gets a black graphics context.</summary>
         <returns>A <see cref="T:Gdk.GC"/></returns>
-        <remarks>To be added</remarks>
+        <remarks/>
       </Docs>
     </Member>
     <Member MemberName="SetForegroundGC">
