@@ -1,5 +1,13 @@
 2004-08-27 Shane Landrum <epicene@pobox.com>
 
+	* en/Gtk/Style.xml: bugfixes, more docs.
+	* en/Gtk/TextBTree.xml: internal class, do not use.
+	* en/Gtk/Accel*.xml: Accelerator-related docs.
+	* en/Gtk/CurrentParagraphAlignmentChangedArgs.xml
+	* en/Gtk/CurrentParagraphStyleChangedArgs.xml: Event data docs.
+	
+2004-08-27 Shane Landrum <epicene@pobox.com>
+
 	* en/Gtk/WindowKeysForeachFunc.xml
 	* en/Gtk/Accessibility.xml
 	* en/Gtk/CallbackMarshal.xml
